# DashboardAnalytics

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  procesamiento.py  procesamientocopy.py  pyproject.toml  requirements.txt  streamlit_app.py  test_app.py
.github/workflows/: workflow.yml
core/: parser.py
data/: modified.csv
data/snapshots/: data_drift_report.json
reports/data_quality/: data_quality_report.html
reports/model_performance/: model_perform_report.html
src/: diagnostico.py  procesamiento.py  validación.py
vistas/: data_drift.py  data_quality.py  model_performance.py
