[project]
name = "dashboardanalytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = "<4.0, >=3.12"
dependencies = [
    "streamlit (==1.53.1)",
    "evidently (==0.6.7)"
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
